Fixed game decision modal not popping up sometimes on checkmate  on safari and ios because of lock-screen class on body element.

--- a/src/components/ChessBoard/ChessBoardWrapper.css
+++ b/src/components/ChessBoard/ChessBoardWrapper.css
@@ -86,9 +86,10 @@
   height: 100%;
 }
 .captured-pieces {
-  white-space: nowrap;
+  display: flex;
 }
 .piece-type {
+    display: flex;
   margin-right: 12.5px;
 }
 .piece {
